# llvm-passes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
passes/: CMakeLists.txt  CallGraph.cpp  ExternalCall.cpp  HelloWorld.cpp  MemoryAlloc.cpp  Plugin.cpp  PointerDereference.cpp  StaticVarAccess.cpp
test/: CMakeLists.txt  test.c
